[package]
name = "unsigned-varint"
version = "0.6.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
description = "unsigned varint encoding"
repository = "https://github.com/paritytech/unsigned-varint"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
std = []
codec = ["std", "bytes", "tokio-util"]
futures = ["std", "futures-io", "futures-util"]
asynchronous_codec = ["std", "bytes", "asynchronous-codec"]

[dependencies]
bytes = { version = "1", optional = true }
futures-io = { version = "0.3.4", optional = true }
futures-util = { version = "0.3.4", features = ["io"], optional = true }
asynchronous-codec = { version = "0.5", optional = true }
tokio-util = { version = "0.3.1", features = ["codec"], optional = true }
nom = { version = "6", optional = true }

[dev-dependencies]
criterion = "0.3"
futures-executor = "0.3.4"
hex = "0.4"
rand = "0.7"
quickcheck = "0.9"

[[bench]]
name = "benchmark"
harness = false
