[package]
name = "unsigned-varint"
version = "0.5.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
description = "unsigned varint encoding"
repository = "https://github.com/paritytech/unsigned-varint"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
std = []
codec = ["std", "bytes", "tokio-util"]
futures = ["std", "futures-io", "futures-util"]
futures-codec = ["std", "bytes", "futures_codec"]

[dependencies]
bytes = { version = "0.5.3", optional = true }
futures-io = { version = "0.3.4", optional = true }
futures-util = { version = "0.3.4", features = ["io"], optional = true }
futures_codec = { version = "0.4", optional = true }
tokio-util = { version = "0.3.1", features = ["codec"], optional = true }
nom = { version = "6", optional = true }

[dev-dependencies]
criterion = "0.3"
futures-executor = "0.3.4"
hex = "0.4"
quickcheck = "1"

[[bench]]
name = "benchmark"
harness = false
